--- a/.settings/org.eclipse.jst.j2ee.ejb.annotations.xdoclet.prefs
+++ b/.settings/org.eclipse.jst.j2ee.ejb.annotations.xdoclet.prefs
@@ -1,5 +1,5 @@
 XDOCLETBUILDERACTIVE=true
 XDOCLETHOME=
-XDOCLETUSEGLOBAL=true
+XDOCLETUSEGLOBAL=false
 XDOCLETVERSION=1.2.1
 eclipse.preferences.version=1
