xdoclet-1.2.1.jar - retirada de erro

--- a/.settings/org.eclipse.jst.j2ee.ejb.annotations.xdoclet.prefs
+++ b/.settings/org.eclipse.jst.j2ee.ejb.annotations.xdoclet.prefs
@@ -1,5 +1,5 @@
 XDOCLETBUILDERACTIVE=true
-XDOCLETHOME=/home/labnoite/\u00C1rea de Trabalho/xdoclet-1.2.1/lib
+XDOCLETHOME=/home/labnoite/\u00C1rea de Trabalho/CleanMax/CleanMax/WebContent/WEB-INF/lib
 XDOCLETUSEGLOBAL=true
 XDOCLETVERSION=1.2.1
 eclipse.preferences.version=1
